# CLI-Eh-Downloader

./: .gitignore  CLI-Eh-Downloader.bat  README.md  README_zh.md  README_zh_cn.md  config.example.toml  config.toml  pyproject.toml
cli_eh_downloader/: __init__.py  __main__.py  cli.py  client.py  config.py  display.py  downloader.py  models.py  parser.py  shell.py  sorting.py  task_manager.py  torrent.py  torrent_client.py  utils.py
goehentai/: __init__.py  __main__.py  cli.py  client.py  config.py  display.py  downloader.py  models.py  parser.py  shell.py  task_manager.py  torrent.py  utils.py
